// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create declarations and exports in the decorator 1`] = `
"import { DtChartExampleDataService } from './chart-example-data.service';
import { DtExampleChartMinMax } from './chart-min-max-example/chart-min-max-example';
@NgModule({
    imports: [
        CommonModule,
        DtChartModule,
        DtKeyValueListModule,
        DtButtonModule,
        DtButtonGroupModule,
    ],
    declarations: [
        DtExampleChartMinMax,
    ],
    providers: [DtChartExampleDataService],
    exports: [DtExampleChartMinMax]
})
export class DtChartExamplesModule {
}
"
`;

exports[`should remove all relative imports, which are not related to the current example 1`] = `
"import { NgModule } from '@angular/core';
import { DtOverlayModule } from '@dynatrace/barista-components/overlay';
import { DtKeyValueListModule } from '@dynatrace/barista-components/key-value-list';
import { DtButtonModule } from '@dynatrace/barista-components/button';
import { DtIconModule } from '@dynatrace/barista-components/icon';
import { DtTileModule } from '@dynatrace/barista-components/tile';
import { DtExampleOverlayDefault } from './overlay-default-example/overlay-default-example';
"
`;

exports[`should remove all relative imports, which are not related to the current example 2`] = `
"import { NgModule } from '@angular/core';
import { DtOverlayModule } from '@dynatrace/barista-components/overlay';
import { DtKeyValueListModule } from '@dynatrace/barista-components/key-value-list';
import { DtButtonModule } from '@dynatrace/barista-components/button';
import { DtIconModule } from '@dynatrace/barista-components/icon';
import { DtTileModule } from '@dynatrace/barista-components/tile';
import { SomeService } from './example.service.ts';
import { DtExampleOverlayDefault } from './overlay-default-example/overlay-default-example';
"
`;
